# RevoMol

./: .gitignore  .pylintrc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  compare_datasets.py  convert_json_to_csv.py  enumerate_smiles.py  enumerate_unique_smiles.py  find_closest_neighbor.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: authors.rst  conf.py  contributing.rst  history.rst  index.rst  installation.rst  user_guide.rst
docs/source/quick_start/: quick_start.rst
docs/source/user_guide/: ecfp_gcf.rst  evaluate_molecule.rst  evolutionary_algorithm.rst  molecule_representation.rst  mutate_molecule.rst  neighborhood_strategy.rst
evomol/: __init__.py  cli.py  default_parameters.py  evomol.py  logging.py  neighborhood_strategy.py
evomol/action/: __init__.py  action.py
evomol/action/molecular_graph/: __init__.py  action_molecular_graph.py  add_atom.py  add_group.py  change_bond.py  cut_atom.py  insert_carbon.py  move_group.py  remove_atom.py  remove_group.py  substitute_atom.py  xxx.py
evomol/evaluation/: __init__.py  cl_score.py  cycle_score.py  diversity.py  evaluation.py  generic_cyclic_features.py  generic_cyclic_scaffolds.py  isomer.py  logp.py  nb_perturbations.py  plogp.py  qed.py  rd_filters.py  rediscovery.py  sa_score.py  silly_walks.py  unknown_ecfp.py
evomol/representation/: __init__.py  ecfp4.py  molecular_graph.py  molecule.py  smiles.py
evomol/representation/molecular_graph_actions/: __init__.py  add_atom.py  (+10 more)
evomol/search/: enumeration.py  evolutionary_algorithm.py  neighborhood_strategy.py  parameters.py  selection_strategy.py
evomol/visualization/: draw_mol.py
external_data/smiles_datasets/: ChEMBL.csv
logging_configs/: stderr-json-file.json  stdout-json-file.json
notebooks/: draw_mol.ipynb  explore_neighbors.ipynb
output/: enumeration_C_depth_2.tgz  result_parallel_cluster.csv
scripts/: cache_test.py  compare_datasets.py  convert_json_to_csv.py  diversity.py  draw_mol.py  enumerate_smiles.py  eval_mol.py  evaluation.py  evolutionary_algorithm.py  explore_neighborhood.py  explore_neighborhood_depth.py  find_closest_neighbor.py  fingerprints.py  generate_ecfp_file.py  generate_gcf_file.py  logging_tests.py  main.py  molecule_validity.py  neighborhood_validity_cardinality.py  new_evaluation_example.py  new_mutation_example.py  new_neighborhood_example.py  new_representation_example.py  old_new_fingerprints.py  solution_to_remove_error_rdkit.py  tanimoto.py
tests/: __init__.py  test_evomol.py  test_mol_graph_actions.py
tests/action/: test_molecular_graph_actions.py
tests/evaluation/: test_evaluations.py
tests/representation/: test_molecular_graph.py  test_molecular_graph_actions.py
typings/rdkit/: RDLogger.pyi  TestRunner.pyi  rdBase.pyi
(+166 files in other folders)
