[metadata]
name = EvoMol
description = Evolutionary algorithm for molecule generation
version = 0.1.0
author = Cyril Grelier
licence = MIT

[options]
install_requires = rdkit
package_dir = =evomol
zip_safe = no

[options.package_data]
evomol = py.typed

[flake8]
max-line-length = 88
per-file-ignores =
*/__init__.py: F401
